--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML>
 <HTML>
+<head>
+    <title>Aiden's Projects</title>
+    <link rel="stylesheet" href="./test.css">
+    <script src="./test.js" defer></script>
+</head>
 <body>
     <h1> haii :3</h1>
+    <span class="circle"></span>
 </body>
 </HTML>
