--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <HTML>
 <head>
     <title>Aiden's Projects</title>
-    <link rel="stylesheet" href="./test.css">
-    <script src="./test.js" defer></script>
+    <link rel="stylesheet" href="test.css">
+    <script src="test.js" defer></script>
 </head>
 <body>
     <h1> haii :3</h1>
